--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
 
 img {
   display: block;
+  max-width: 100%;
 }
 
 .wrapper {
@@ -233,7 +234,7 @@ img {
 }
 
 .drawer-logo {
-  margin-inline: auto;
+  text-align: center;
 }
 .drawer-logo img {
   width: 180px;
@@ -311,4 +312,91 @@ img {
 .first-view__button {
   margin-top: 30px;
   padding-bottom: 3px;
+}
+
+.seminar {
+  background: #fff;
+}
+
+.seminar__inner {
+  padding-inline: 15px;
+}
+
+.seminar__head {
+  padding-left: 15px;
+}
+
+.seminar__cards {
+  margin-top: 46px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 36px;
+}
+
+.seminar-card {
+  border-radius: 6px;
+  -webkit-box-shadow: 5px 7px 34px 0px #f1f1f1;
+          box-shadow: 5px 7px 34px 0px #f1f1f1;
+  padding-block: 24px 30px;
+  padding-inline: 12px;
+}
+
+.seminar-card__image {
+  margin-inline: auto;
+  width: 324px;
+}
+.seminar-card__body {
+  margin-top: 22px;
+}
+
+.seminar-card__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+}
+
+.seminar-card__label {
+  font-size: 12px;
+  font-weight: 700;
+  border-radius: 2px;
+  background: #2392db;
+  color: #ffffff;
+  padding: 6px 12px;
+}
+
+.seminar-card__date {
+  font-weight: 500;
+  line-height: 1.4375;
+}
+
+.seminar-card__title {
+  margin-top: 14px;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.45;
+}
+
+.seminar-card__text {
+  margin-top: 14px;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.seminar-card__button {
+  margin-top: 22px;
+  text-align: right;
+}
+
+.seminar__button {
+  margin-top: 46px;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
