--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,8 +1,9 @@
 @use "variable" as var;
 
-.wrap{
-    background: linear-gradient(180deg, #eaf4f7 0%, #fff 100%);
+.wrap {
+  background: linear-gradient(180deg, #eaf4f7 0%, #fff 100%);
 }
+
 .header {
   width: 100%;
   height: 80px;
@@ -99,7 +100,7 @@
 }
 
 .drawer-logo {
-  margin-inline: auto;
+  text-align: center;
   img {
     width: 180px;
   }
