--- a/sass/_seminar.scss
+++ b/sass/_seminar.scss
@@ -11,43 +11,76 @@
 }
 
 .seminar__cards {
+  margin-top: 46px;
+  display: flex;
+  flex-direction: column;
+  gap: 36px;
 }
 
 .seminar__card {
 }
 
 .seminar-card {
+  border-radius: 6px;
+  box-shadow: 5px 7px 34px 0px #f1f1f1;
+  padding-block: 24px 30px;
+  padding-inline: 12px;
 }
 
 .seminar-card__content {
 }
 
 .seminar-card__image {
+  margin-inline: auto;
+  width: 324px;
+  img {
+  }
 }
 
 .seminar-card__body {
+  margin-top: 22px;
 }
 
 .seminar-card__info {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .seminar-card__label {
+  font-size: 12px;
+  font-weight: 700;
+  border-radius: 2px;
+  background: #2392db;
+  color: #ffffff;
+  padding: 6px 12px;
+
 }
 
 .seminar-card__date {
+  font-weight: 500;
+  line-height: calc(23px / 16px);
 }
 
 .seminar-card__title {
+  margin-top: 14px;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: calc(29px / 20px);
 }
 
 .seminar-card__text {
+  margin-top: 14px;
+  font-size: 14px;
+  font-weight: 500;
 }
 
 .seminar-card__button {
+  margin-top: 22px;
+  text-align: right;
 }
 
-.button-group2 {
-}
-
-.button-medium {
+.seminar__button {
+  margin-top: 46px;
+  text-align: center;
 }
