--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,7 @@ img {
   text-align: center;
 }
 
-.first-view__logo a img {
+.first-view__logo {
   margin-inline: auto;
   width: 250px;
 }
@@ -318,6 +318,10 @@ img {
   padding-bottom: 3px;
 }
 
+.blog {
+  background: #ffffff;
+}
+
 .blog__inner {
   padding-inline: 30px 38px;
 }
@@ -325,6 +329,55 @@ img {
 .blog__cards {
   display: grid;
   gap: 16px;
+}
+
+.blog-card {
+  border-radius: 4px;
+  -webkit-box-shadow: 5px 7px 34px 0px #f1f1f1;
+          box-shadow: 5px 7px 34px 0px #f1f1f1;
+  padding: 12px 15px 16px;
+}
+
+.blog__image {
+  position: relative;
+  width: 330px;
+}
+
+.blog__tag {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: inline-block;
+  background: #2392db;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 1.4166666667;
+  padding: 3px 32px;
+}
+
+.blog__text-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.blog__title {
+  color: #333333;
+  margin-top: 5px;
+  font-size: 15px;
+  font-weight: 700;
+}
+
+.blog__sub-title {
+  color: #333333;
+  margin-top: 3px;
+  font-size: 13px;
+  font-weight: 400;
 }
 
 .blog__button {
