--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,73 @@ img {
   font-weight: 700;
 }
 
+.news__inner {
+  padding-inline: 15px;
+}
+
+.news__cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.news-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 9px;
+  padding-block: 10px;
+  border-bottom: 1px solid #e3e3e3;
+}
+
+.news__meta {
+  color: #333333;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.news__title {
+  color: #111111;
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.news__pagination {
+  margin-top: 46px;
+}
+
+.pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 20px;
+}
+
+.next img {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.news__button {
+  margin-top: 30px;
+  padding: 4px 3px;
+  text-align: center;
+}
+
 .first-view {
   background: -webkit-gradient(linear, left top, left bottom, from(#eaf4f7), to(#fff));
   background: linear-gradient(180deg, #eaf4f7 0%, #fff 100%);
@@ -316,6 +383,30 @@ img {
 .first-view__button {
   margin-top: 30px;
   padding-bottom: 3px;
+}
+
+.cta {
+  background: -webkit-gradient(linear, left top, right top, from(#2390dc), to(#2bc8c8));
+  background: linear-gradient(90deg, #2390dc 0%, #2bc8c8 100%);
+  text-align: center;
+}
+
+.cta__title {
+  color: #ffffff;
+  font-size: 26px;
+  font-weight: 700;
+  letter-spacing: 2.6px;
+}
+
+.cta__sub-title {
+  margin-top: 8px;
+  color: #ffffff;
+  font-weight: 400;
+  letter-spacing: 1.6px;
+}
+
+.cta_button {
+  margin-top: 17px;
 }
 
 .blog {
