--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,16 @@ img {
           box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
 }
 
+.button-group1,
+.button-group2 {
+  -webkit-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+}
+.button-group1:hover,
+.button-group2:hover {
+  opacity: 0.7;
+}
+
 .heading1 {
   text-align: center;
   font-family: "Montserrat", sans-serif;
@@ -262,6 +272,10 @@ img {
   font-weight: 700;
 }
 
+.news {
+  background: #ffffff;
+}
+
 .news__inner {
   padding-inline: 15px;
 }
@@ -318,12 +332,129 @@ img {
   gap: 20px;
 }
 
-.next img {
+.arrow-icon,
+.number {
+  border: 1px solid #828282;
+  background: #ffffff;
+  width: 36px;
+  height: 36px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: background 0.5s, color 0.5s, stroke 0.5s;
+  transition: background 0.5s, color 0.5s, stroke 0.5s;
+}
+.arrow-icon:hover,
+.number:hover {
+  background: #228ddd;
+  border: none;
+  color: #ffffff;
+}
+.arrow-icon:hover .path-color,
+.number:hover .path-color {
+  stroke: #ffffff;
+}
+
+.path-color {
+  stroke: #828282;
+}
+
+.next {
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
 }
 
+.number {
+  color: #707070;
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 1.44px;
+  text-indent: 1.44px;
+}
+
 .news__button {
+  margin-top: 30px;
+  padding: 4px 3px;
+  text-align: center;
+}
+
+.concept {
+  background: #f4fbff;
+}
+
+.concept__inner {
+  padding-inline: 20px;
+  display: grid;
+  gap: 30px;
+  grid-template-rows: 310px 1fr;
+}
+
+.concept__image {
+  margin-inline: auto;
+}
+.concept__image img {
+  width: 310px;
+}
+
+.concept__lead {
+  color: #228ddd;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.concept__text {
+  margin-top: 30px;
+  color: #333333;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 2;
+}
+
+.concept__button {
+  margin-top: 30px;
+  padding: 4px 3px;
+  text-align: center;
+}
+
+.case-study__inner {
+  padding-left: 20px;
+}
+
+.case-study__heading {
+  padding-left: 10px;
+}
+
+.case-study__slider {
+  margin-top: 50px;
+}
+
+.case-study__card {
+  border-radius: 4px;
+  background: #ffffff;
+  -webkit-filter: drop-shadow(5px 7px 34px #f1f1f1);
+          filter: drop-shadow(5px 7px 34px #f1f1f1);
+  width: 320px;
+}
+
+.case-study__text-box {
+  padding-block: 14px;
+  padding-left: 10px;
+}
+
+.case-study__text {
+  color: #228ddd;
+  font-size: 15px;
+  font-weight: 700;
+}
+
+.case-study__button {
   margin-top: 30px;
   padding: 4px 3px;
   text-align: center;
