--- a/sass/_parts.scss
+++ b/sass/_parts.scss
@@ -64,6 +64,15 @@
   box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
 }
 
+// ボタンホバー時
+.button-group1,
+.button-group2 {
+  transition: opacity 0.5s;
+  &:hover {
+    opacity: 0.7;
+  }
+}
+
 // 見出し
 .heading1 {
   text-align: center;
