--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,12 @@
 @use "variable";
 @use "parts";
 @use "header";
+@use "first-view";
 @use "news";
 @use "concept";
 @use "company";
-@use "first-view";
+@use "price";
 @use "cta";
 @use "blog";
 @use "seminar";
+@use "qa";
