--- a/sass/_company.scss
+++ b/sass/_company.scss
@@ -1,86 +1,147 @@
-.case-study {
-}
-
-.case-study__inner {
-  padding-left: 20px;
-}
-
-.case-study__heading {
-  padding-left: 10px;
-}
-
-.case-study__slider {
-  margin-top: 50px;
-}
-
-.swiper {
-}
-
-.case-study__swiper {
-}
-
-.swiper-wrapper {
-}
-
-.case-study__wrapper {
-}
-
-.swiper-slide {
-}
-
-.case-study__slide {
-}
-
-.case-study__card {
-  border-radius: 4px;
+.company {
   background: #ffffff;
-  filter: drop-shadow(5px 7px 34px #f1f1f1);
-  width: 320px;
 }
 
-.case-study__image {
+.section {
 }
 
-.case-study__text-box {
-  padding-block: 14px;
-  padding-left: 10px;
+.company__inner {
+  padding-inline: 15px;
 }
 
-.case-study__text {
-  color: #228ddd;
-  font-size: 15px;
+.company__heading {
+  padding-left: 15px;
+}
+
+.company__profile {
+}
+
+.profile__nav {
+  margin-bottom: -22px;
+}
+
+.profile__nav-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile__nav-item {
+  cursor: pointer;
+  padding: 10px 30px;
+  color: #2392db;
+  background: #ffffff;
   font-weight: 700;
 }
 
-.case-study__company {
+// 各タブの共通スタイル
+.profile__content--details,
+.profile__content--history,
+.profile__content--certify {
+  display: none;
+
+  &.active {
+    display: block;
+    border: 2px solid #2392db;
+    background: #ffffff;
+  }
 }
 
-.name {
-}
-
-.case-study__industry {
-}
-
-.swiper-pagination {
-}
-
-.case-study__pagination {
-}
-
-.swiper-button-prev {
-}
-
-.case-study__prev {
-}
-
-.swiper-button-next {
-}
-
-.case-study__next {
-}
-
-.case-study__button {
-  margin-top: 30px;
-  padding: 4px 3px;
+// 会社概要
+.profile__content--details {
+  padding: 50px 40px 60px;
   text-align: center;
+
+  dl {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  dt,
+  dd {
+    color: #333333;
+    border: 1px solid #dbdbdb;
+    padding-top: calc(15px - 2px);
+    padding-bottom: calc(14px - 2px);
+  }
+
+  dt {
+    font-weight: 700;
+    background: #f2f2f2;
+  }
+
+  dd {
+    text-align: left;
+    padding-left: 10px;
+  }
+}
+
+.company-about__title {
+  color: #333333;
+  font-size: 22px;
+  font-weight: 700;
+}
+
+.company-about__sub-title {
+  margin-top: 20px;
+  color: #333333;
+  font-weight: 400;
+}
+
+// 沿革
+.profile__content--history {
+  padding-block: 44px 122px;
+  padding-left: 30px;
+}
+
+.company-history__box {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+
+  &:nth-of-type(n + 2) {
+    margin-top: 16px;
+  }
+}
+
+.company-history__head {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.company-history__dot {
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  background: #2bcbc6;
+}
+
+.company-history__meta {
+  color: #2392db;
+  font-weight: 700;
+}
+
+.company-history__text {
+  color: #000;
+  font-weight: 400;
+  padding-left: calc(8px + 9px);
+}
+
+// 認証取得
+
+.profile__content--certify {
+  padding: 58px 30px 168px;
+}
+
+.certify__title {
+  color: #2392db;
+  font-weight: 700;
+}
+
+.certify__text {
+  margin-top: 14px;
+  color: #333333;
+  font-weight: 400;
 }
