--- a/sass/_seminar.scss
+++ b/sass/_seminar.scss
@@ -77,6 +77,8 @@
 .seminar-card__button {
   margin-top: 22px;
   text-align: right;
+  padding-top: 5px;
+  padding-bottom: 7px;
 }
 
 .seminar__button {
