--- a/sass/_case-study.scss
+++ b/sass/_case-study.scss
@@ -114,6 +114,5 @@
 .case-study__button {
   margin-top: 30px;
   text-align: center;
-  padding-top: 4px;
-  padding-bottom: 3px;
+  padding-block: 4px;
 }
