--- a/sass/_parts.scss
+++ b/sass/_parts.scss
@@ -60,7 +60,7 @@
   font-size: 16px;
   font-weight: 700;
   letter-spacing: 3px;
-  padding: 9px 54px;
+  padding: calc(9px - 1px) calc(54px - 1px);
   box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
 }
 
